# chainlit_spike

./: .gitignore  app.py  chainlit.md  clean_data.py  pyproject.toml  scrappy.ipynb  simple.py
ingestion/: build_aisearch_index.py  split_docs.py  split_lang.py
personas/: chatty_mcchatface.py  doc_summarizer.py  dr_ragilicious.py  mr_andersson.py  paper_boy.py  persona.py
